Mask mobile number in contact information

--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                                     <span>Mobile Number</span>
                                 </div>
                                 <p>
-                                    <span>: 01521712959</span>
+                                    <span>: 01521******</span>
                                 </p>
                             </div>
                             <div class="contact-item">
